<resources>
    <string name="app_name">MovieInfo</string>

    <string name="title_search">Search movies</string>
    <string name="title_saved">Saved movies</string>
    <string name="title_popular">Popular movies</string>
    <string name="title_about">About app</string>
    <string name="nav_btn_popular">Popular</string>
    <string name="nav_btn_saved">Saved</string>
    <string name="nav_btn_search">Search</string>
    <string name="menu_btn_search">Search</string>
    <string name="menu_btn_about">About App</string>
    <string name="menu_btn_copy">Copy title</string>
    <string name="fab_save_movie">Save Movie</string>
    <string name="iv_movie_image">Movie Image</string>
    <string name="iv_movie_rating">Movie Rating</string>
    <string name="iv_similar_movie_image">Similar Movie Image</string>
    <string name="toolbar_iv_movie_image">Movie Image</string>

    <string name="btn_retry">Retry</string>
    <string name="msg_failed_to_connect">Failed to connect</string>
    <string name="msg_nothing_saved">Nothing has been saved yet</string>
    <string name="msg_no_connection">No internet connection</string>
    <string name="msg_network_failure">Network failure</string>
    <string name="msg_conversion_error">Conversion error</string>
    <string name="msg_movie_deleted">Successfully deleted movie</string>
    <string name="msg_undo">Undo</string>
    <string name="msg_copied">Copied</string>
    <string name="msg_unknown_error">An unknown error occurred</string>
    <string name="msg_empty_query_field">Please enter the search query</string>

    <string name="test_title">Name one two three four five</string>
    <string name="test_description">Overview one two three four five Overview one two three four five</string>
    <string name="test_year">2011</string>
    <string name="test_vote">5.0</string>
    <string name="test_genre">Comedy</string>

    <string name="tv_about_line_1">Made with ❤ by Serhii Sharipov</string>
    <string name="tv_about_line_2">using Kotlin</string>
    <string name="tv_about_line_3">and data from themoviedb.org</string>
    <string name="tv_version">Version:</string>
    <string name="test_version">1.0</string>
</resources>